WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237276
REGRESSION(
r285232
)
https://alvaromontoro.github.io/almond.css/demo/
looks wrong in Safari, ok in Chrome and Firefox
https://bugs.webkit.org/show_bug.cgi?id=237276
Summary
REGRESSION(r285232) https://alvaromontoro.github.io/almond.css/demo/ looks wr...
Jon Lee
Reported
2022-02-28 09:19:02 PST
https://alvaromontoro.github.io/almond.css/demo/
Scroll to the bottom of the page. There are circular progress bars. The percentage label is misplaced in Safari, it is properly centered in Chrome and Firefox.
Attachments
Test reduction
(230 bytes, text/html)
2022-03-01 08:48 PST
,
alan
no flags
Details
Patch
(4.70 KB, patch)
2022-03-01 13:37 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-02-28 09:50:47 PST
This is grid with `place-items: center`.
Radar WebKit Bug Importer
Comment 2
2022-02-28 10:11:32 PST
<
rdar://problem/89566459
>
alan
Comment 3
2022-03-01 08:48:09 PST
Created
attachment 453500
[details]
Test reduction
alan
Comment 4
2022-03-01 13:37:58 PST
Created
attachment 453537
[details]
Patch
Simon Fraser (smfr)
Comment 5
2022-03-01 13:41:26 PST
Comment on
attachment 453537
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=453537&action=review
> LayoutTests/ChangeLog:10 > + * fast/css-grid-layout/ascpect-ratio-with-percent-width-expected.html: Added. > + * fast/css-grid-layout/ascpect-ratio-with-percent-width.html: Added.
Ideally this would be a WPT
EWS
Comment 6
2022-03-01 16:01:09 PST
Committed
r290706
(
247955@main
): <
https://commits.webkit.org/247955@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453537
[details]
.
Frédéric Wang Nélar
Comment 7
2022-03-02 00:26:05 PST
Comment on
attachment 453537
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=453537&action=review
>> LayoutTests/ChangeLog:10 >> + * fast/css-grid-layout/ascpect-ratio-with-percent-width.html: Added. > > Ideally this would be a WPT
Any reason, why this was not converted to a WPT reftest in the committed patch? nit: there is a typo in the file name, it should be "aspect".
Sam Sneddon [:gsnedders]
Comment 8
2022-05-10 09:55:38 PDT
***
Bug 240278
has been marked as a duplicate of this bug. ***
Brent Fulgham
Comment 9
2022-05-26 14:52:59 PDT
This fix shipped with Safari 15.5 (all platforms).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug